--- a/pom.xml
+++ b/pom.xml
@@ -49,12 +49,12 @@
         <developer>
             <id>dermot-hardy</id>
             <name>Dermot Hardy</name>
-            <email>dermot.hardy@microfocus.com</email>
+            <email>dhardy2@opentext.com</email>
         </developer>
         <developer>
             <id>michael-bryson</id>
             <name>Michael Bryson</name>
-            <email>michael.bryson@microfocus.com</email>
+            <email>mbryson@opentext.com</email>
         </developer>
     </developers>
 
