--- a/src/main/docker/Dockerfile.jdk
+++ b/src/main/docker/Dockerfile.jdk
@@ -18,7 +18,7 @@
 ARG DOCKER_HUB_PUBLIC=docker.io
 
 # Reference the base image we normally use
-FROM ${DOCKER_HUB_PUBLIC}/cafapi/prereleases:opensuse-base-2.10.0-SNAPSHOT AS usual-base
+FROM ${DOCKER_HUB_PUBLIC}/cafapi/opensuse-base:2 AS usual-base
 
 #
 # Stage 1
