US898098: Base images on openSUSE Leap 15.6

--- a/src/main/docker/Dockerfile.jdk
+++ b/src/main/docker/Dockerfile.jdk
@@ -23,7 +23,7 @@ FROM ${DOCKER_HUB_PUBLIC}/cafapi/opensuse-base:2 AS usual-base
 #
 # Stage 1
 #
-FROM ${DOCKER_HUB_PUBLIC}/opensuse/tumbleweed:latest AS stage1
+FROM ${DOCKER_HUB_PUBLIC}/opensuse/leap:15.6 AS stage1
 
 # Set the locale manually to a set inherited from the base image (defaults to POSIX)
 ENV LANG=en_US.utf8
